--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/user
 spring.datasource.username=root
 spring.datasource.password=0285
 server.port=8080
-server.servlet.context-path=/home
+server.servlet.context-path=/api
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=tri
