--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://localhost:3306/user
+spring.datasource.url=jdbc:mysql://localhost:3306/projects
 spring.datasource.username=root
 spring.datasource.password=0285
 server.port=8080
