Edit applocatiom properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD} # S? l?y t? Render
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 # Dùng 'validate' ho?c 'update' cho production, không dùng 'create-drop'
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # =======================================
 # JWT SECRET KEY (S?A L?I)
