Edit applocatiom properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/api
 spring.datasource.url=${SPRING_DATASOURCE_URL} # S? l?y t? Render
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME} # S? l?y t? Render
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD} # S? l?y t? Render
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 # Dùng 'validate' ho?c 'update' cho production, không dùng 'create-drop'
 spring.jpa.hibernate.ddl-auto=update
