--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,16 @@
         </dependency>
 
         <!-- MySQL Connector -->
+<!--        <dependency>-->
+<!--            <groupId>com.mysql</groupId>-->
+<!--            <artifactId>mysql-connector-j</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+        <!-- === DATABASE DRIVER === -->
+        <!-- Dùng cho deploy lên Render -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
